<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background">
    <TextView
        android:textStyle="bold"
        android:id="@+id/title"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:gravity="center"
        android:text="@string/tutoring101"
        android:layout_marginBottom="0dp"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:textColor="@color/black"
        android:layout_below="@+id/title"
        android:id="@+id/slogant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/titleSize"
        android:gravity="center"
        android:text="@string/slogant"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal" />
    <Space
        android:id="@+id/space"
        android:layout_below="@+id/slogant"
        android:layout_width="match_parent"
        android:layout_height="80dp" />
    <LinearLayout
        android:id="@+id/logginLayout"
        android:layout_below="@+id/space"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <!-- Email Label -->
        <EditText
            android:textSize="@dimen/titleSize"
            android:padding="10dp"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <!-- Password Label -->
        <EditText
            android:textSize="@dimen/titleSize"
            android:padding="10dp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:onClick="loginButton"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:id="@+id/btn_login"
            android:padding="12dp"
            android:background="@color/colorPrimary"
            android:text="Login"/>
        <TextView
            android:onClick="registerPage"
            android:textColor="@color/black"
            android:paddingTop="5dp"
            android:layout_below="@+id/logginLayout"
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/create_account"
            android:gravity="center"
            android:textSize="@dimen/titleSize"/>
    </LinearLayout>
    <ImageButton
        android:src="@drawable/ic_help_black_24dp"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"/>
    <Button
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About us"/>
</RelativeLayout>