<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/linkPayment"
        android:textAlignment="center"
        android:textSize="@dimen/titleSize"
        android:text="LINK PAYMENT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:id="@+id/payment"
        android:layout_below="@+id/linkPayment"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/creditCardIcon"
            android:src="@drawable/ic_payment_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_toRightOf="@+id/creditCardIcon"
            android:id="@+id/creditCardInput"
            android:hint="@string/creaditCard"
            android:textSize="@dimen/titleSize"
            android:inputType="numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <TextView
        android:id="@+id/or"
        android:layout_below="@+id/payment"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:text="OR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_below="@+id/or"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:id="@+id/payPalButton"
        android:text="PayPal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp" />
    <TextView
        android:textSize="20dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/termAndConditions"
        android:text="@string/termAndCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView

        android:c="@color/SlightGray"
        android:requiresFadingEdge="horizontal"
        android:fadingEdgeLength="10dp"
        android:textSize="20dp"
        android:id="@+id/conditions"
        android:layout_below="@+id/termAndConditions"
        android:text="@string/condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame" />
</LinearLayout>